# cavsim2d

./: .buildinfo  .buildinfo.bak  .flake8  .gitignore  Absorbing boundary condition.ipynb  CHANGELOG.md  README.md  cavsim2d.analysis.html  cavsim2d.analysis.tune.html  cavsim2d.analysis.uq.dakota_scripts.html  cavsim2d.analysis.uq.html  cavsim2d.analysis.wakefield.html  cavsim2d.data_module.html  cavsim2d.html  cavsim2d.solvers.NGSolve.html  cavsim2d.solvers.html  cavsim2d.utils.html  eigenmode.html  genindex.html  implemented.md  index.html  installation.html  introduction.html  modules.html  multipacting.html  objects.inv  optimisation.html  py-modindex.html  pyproject.toml  quickstart.html  references.html  requirements.txt  search.html  searchindex.js  setup.html  setup.py  sitemap.xml  test_optimisation.py  theory.html  tmp_shared_functions.py  (+3 more)
.claude/: settings.local.json
.doctrees/: cavsim2d.analysis.doctree  cavsim2d.analysis.tune.doctree  cavsim2d.analysis.uq.dakota_scripts.doctree  cavsim2d.analysis.uq.doctree  cavsim2d.analysis.wakefield.doctree  cavsim2d.data_module.doctree  cavsim2d.doctree  cavsim2d.solvers.NGSolve.doctree  cavsim2d.solvers.doctree  cavsim2d.utils.doctree  eigenmode.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  modules.doctree  multipacting.doctree  optimisation.doctree  quickstart.doctree  references.doctree  setup.doctree  theory.doctree  tuning.doctree  uq.doctree  wakefield.doctree
_modules/: index.html
_sources/: cavsim2d.analysis.rst.txt  cavsim2d.analysis.tune.rst.txt  cavsim2d.analysis.uq.dakota_scripts.rst.txt  cavsim2d.analysis.uq.rst.txt  cavsim2d.analysis.wakefield.rst.txt  cavsim2d.data_module.rst.txt  cavsim2d.rst.txt  cavsim2d.solvers.NGSolve.rst.txt  cavsim2d.solvers.rst.txt  cavsim2d.utils.rst.txt  eigenmode.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  modules.rst.txt  quickstart.rst.txt  (+5 more)
(+307 files in other folders)
